# F1guru

./: .gitignore  Pipfile  README.md  components.json  example.ipynb  next.config.js  package.json  pyproject.toml  requirements.txt
.github/workflows/: next-js.yml  python.yml
api/: index.py
app/: config.ts  layout.tsx  page.tsx
app/api/question/create/: route.ts
app/api/question/grid/: route.ts
app/q/[id]/: page.tsx
components/: mode-toggle.tsx  navbar.tsx  providers.tsx
components/page-content/: index.tsx
components/question-card/: button-card.tsx  index.tsx
components/question-count/: index.tsx
components/question-form/: index.tsx  submit-button.tsx
components/question-grid/: index.tsx
components/ui/: toast.tsx
f1guru/: __init__.py  api.py  chain.py  database.py
lib/: utils.ts
lib/validators/: question.ts
prisma/: schema.prisma
server/: db.ts
src/app/: config.ts  page.tsx
src/components/: navbar.tsx
src/components/last-update/: index.tsx
src/components/question-form/: submit-button.tsx
styles/: globals.css
