[tool.poetry]
name = "f1guru"
version = "0.1.0"
description = ""
authors = ["Pau Matas <pmatasalbiol@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.13"
langchain-openai = "^0.1.1"
requests = "^2.31.0"
pymysql = "^1.1.0"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.4"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
